--- a/esqueceusenha.html
+++ b/esqueceusenha.html
@@ -28,6 +28,7 @@
         <form class="recuperar-form">
             <div class="input-group">
                 <input type="email" id="email" placeholder="Seu endereço de e-mail" required>
+                <img width="24" height="24" src="https://img.icons8.com/material-outlined/24/new-post.png" alt="new-post"/>
             </div>
             
             <button type="submit" class="login-button">ENVIAR LINK DE REDEFINIÇÃO</button>
